--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -53,6 +53,16 @@
         "command": "augment-ai.openChat",
         "title": "Open AI Chat",
         "category": "Augment AI"
+      },
+      {
+        "command": "augment-ai.indexWorkspace",
+        "title": "Index Workspace for AI Context",
+        "category": "Augment AI"
+      },
+      {
+        "command": "augment-ai.smartAnalyze",
+        "title": "Smart Code Analysis",
+        "category": "Augment AI"
       }
     ],
     "keybindings": [
@@ -65,6 +75,16 @@
         "command": "augment-ai.openChat",
         "key": "ctrl+shift+c",
         "mac": "cmd+shift+c"
+      },
+      {
+        "command": "augment-ai.indexWorkspace",
+        "key": "ctrl+shift+i",
+        "mac": "cmd+shift+i"
+      },
+      {
+        "command": "augment-ai.smartAnalyze",
+        "key": "ctrl+shift+s",
+        "mac": "cmd+shift+s"
       }
     ],
     "menus": {
@@ -76,6 +96,11 @@
         },
         {
           "command": "augment-ai.refactorCode",
+          "when": "editorHasSelection",
+          "group": "augment-ai"
+        },
+        {
+          "command": "augment-ai.smartAnalyze",
           "when": "editorHasSelection",
           "group": "augment-ai"
         }
